# nyc_opendata_dagster_project

./: .env.example  .gitignore  README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py
.tmp_dagster_home_ejwjfaxk/history/: runs.db
.tmp_dagster_home_ejwjfaxk/history/runs/: 00a2763a-d589-429e-a3b1-007ed0b9209b.db  03e2816d-a8dd-4d26-9710-68f675ed1185.db  04e7c10e-f30a-4b59-b480-32e28d169525.db  0658e50b-f208-4508-aad1-dcf6efee0ce0.db  065d85da-845c-4f8c-b45c-3a6dd58121a4.db  0c2c943d-0795-441e-b417-b114c5f41296.db  0f11489b-00fe-4eff-9fdc-4fb050098ec5.db  12a9dacf-b549-4db8-ab1a-75ee64bbd6fe.db  1472b93e-2a3a-4cfe-a051-0350a0b653c8.db  183af711-989a-4ea5-b1a0-f4dd97e781b1.db  1d8a9f04-a992-479e-bc95-88d3858d7481.db  2003bdd2-9e22-42c6-9d26-7aa5e70fafae.db  203404d5-034c-4dd1-b158-0adaeb6b1279.db  22e90d6d-f571-43be-9247-a0d53a45f2df.db  (+81 more)
.tmp_dagster_home_ejwjfaxk/schedules/: schedules.db
.tmp_dagster_home_m_zj8acz/history/: runs.db
.tmp_dagster_home_m_zj8acz/schedules/: schedules.db
data/raw/: .gitkeep
data/staging/: .gitkeep
deploy/: .env.example  Dockerfile  docker-compose.yml  workspace.yaml
nyc311_dagster_project/: dbt_project.py  definitions.py  jobs.py  partitions.py  resources.py
nyc311_dagster_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nyc311_dagster_project/assets/: constants.py  dbt_assets.py  nyc311.py
nyc_opendata_dagster_project/: definitions.py  jobs.py  partitions.py  resources.py
nyc_opendata_dagster_project/assets/: dbt_assets.py  nyc311.py  nypd_arrest.py
src/datawarehouse/: .user.yml  profiles.yml
(+74 files in other folders)
