[project]
name = "nyc311_dagster_project"
version = "0.1.0"
description = "My first Dagster project for simple processing of NYC 311 data into DuckDB"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-dbt",
    "dbt-duckdb",
    "pandas",
    "requests"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "nyc311_dagster_project.definitions"
code_location_name = "nyc311_dagster_project"

[tool.setuptools.packages.find]
exclude=["nyc311_dagster_project_tests"]
