[project]
name = "nyc_opendata_dagster_project"
version = "0.1.0"
description = "A Dagster project for processing various NYC OpenData datasets into DuckDB using DBT for transformations"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-dbt",
    "dbt-duckdb",
    "pandas",
    "requests"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "nyc_opendata_dagster_project.definitions"
code_location_name = "nyc_opendata_dagster_project"

[tool.setuptools.packages.find]
exclude=["nyc_opendata_dagster_project_tests"]
